--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,7 @@
 {erl_opts, [debug_info]}.
-{deps, []}.
+{deps, [
+        {ranch, {git, "https://github.com/ninenines/ranch.git", {tag, "2.0.0-rc.3"}}}
+       ]}.
 
 {shell, [
   % {config, "config/sys.config"},
