--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, [
-        {ranch, {git, "https://github.com/ninenines/ranch.git", {tag, "2.0.0-rc.3"}}}
+        {ranch, {git, "https://github.com/ninenines/ranch.git", {tag, "2.0.0-rc.3"}}},
+        {proper, "1.3.0"}
        ]}.
 
 {shell, [
